Aufgabe 4.9.1	Verwendung von PrimeFaces-Komponenten für alle Views

--- a/my-aktion/src/main/webapp/donateMoney.xhtml
+++ b/my-aktion/src/main/webapp/donateMoney.xhtml
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
     <title>#{msg['donateMoney.donate_money']}</title>
@@ -24,51 +25,51 @@
 	background-color: ##{donateMoneyController.bgColor}; color: ##{donateMoneyController.textColor}">
     <h1>#{msg['donateMoney.donate_money']}</h1>
 
-    <h:messages globalOnly="true"/>
-    <h:message for="bgColor" style="color: red;"/>
-    <h:message for="textColor" style="color: red;"/>
-    <h:message for="campaignId" style="color: red;"/>
+    <p:messages globalOnly="true"/>
+    <p:message for="bgColor"/>
+    <p:message for="textColor"/>
+    <p:message for="campaignId"/>
     <h:form>
 
         <h:panelGrid columns="3">
             <h:outputLabel value="#{msg['donateMoney.name']}:"></h:outputLabel>
-            <h:inputText id="name"
+            <p:inputText id="name"
                          value="#{donateMoneyController.donation.donorName}">
                 <f:validateRequired/>
-            </h:inputText>
-            <h:message for="name" style="color: red;"/>
+            </p:inputText>
+            <p:message for="name"/>
 
             <h:outputLabel value="#{msg['donateMoney.iban']}:"></h:outputLabel>
-            <h:inputText id="iban"
+            <p:inputText id="iban"
                          value="#{donateMoneyController.donation.account.iban}">
                 <f:validateRequired/>
-            </h:inputText>
-            <h:message for="iban" style="color: red;"/>
+            </p:inputText>
+            <p:message for="iban"/>
 
             <h:outputLabel value="#{msg['donateMoney.name_of_bank']}:"></h:outputLabel>
-            <h:inputText id="name_bank"
+            <p:inputText id="name_bank"
                          value="#{donateMoneyController.donation.account.nameOfBank}">
                 <f:validateRequired/>
-            </h:inputText>
-            <h:message for="name_bank" style="color: red;"/>
+            </p:inputText>
+            <p:message for="name_bank"/>
 
             <h:outputLabel value="#{msg['donateMoney.donation_amount']}:"></h:outputLabel>
             <h:panelGroup>
-                <h:inputText id="donationAmount"
+                <p:inputText id="donationAmount"
                              value="#{donateMoneyController.donation.amount}">
                     <f:validateRequired/>
                     <f:convertNumber maxFractionDigits="2" minFractionDigits="2"/>
-                </h:inputText> EUR
+                </p:inputText> EUR
             </h:panelGroup>
-            <h:message for="donationAmount" style="color: red;"/>
+            <p:message for="donationAmount"/>
 
         </h:panelGrid>
 
-        <h:selectBooleanCheckbox
+        <p:selectBooleanCheckbox
                 value="#{donateMoneyController.donation.receiptRequested}"/> #{msg['donateMoney.i_want_a_receipt']}
         <br/>
 
-        <h:commandButton value="#{msg['donateMoney.donate']}"
+        <p:commandButton value="#{msg['donateMoney.donate']}" ajax="false"
                          action="#{donateMoneyController.doDonation}"/>
     </h:form>
 </h:body>
