--- a/my-aktion/src/main/webapp/listDonations.xhtml
+++ b/my-aktion/src/main/webapp/listDonations.xhtml
@@ -1,6 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
 <body>
 <f:view contracts="#{view.locale.language}">
@@ -11,39 +12,39 @@
             <h2>#{msg['listDonations.beneficiary_account']}: #{campaignProducer.selectedCampaign.account.name}, #{msg['listDonations.iban']}: #{campaignProducer.selectedCampaign.account.iban}, #{campaignProducer.selectedCampaign.account.nameOfBank}</h2>
 
             <h:form>
-                <h:dataTable value="#{campaignProducer.selectedCampaign.donations}" var="donation">
-                    <h:column>
+                <p:dataTable value="#{campaignProducer.selectedCampaign.donations}" var="donation">
+                    <p:column>
                         <f:facet name="header">#{msg['listDonations.name']}</f:facet>
                         <h:outputText value="#{donation.donorName}"/>
-                    </h:column>
-                    <h:column>
+                    </p:column>
+                    <p:column>
                         <f:facet name="header">#{msg['listDonations.iban']}</f:facet>
                         <h:outputText value="#{donation.account.iban}"/>
-                    </h:column>
-                    <h:column>
+                    </p:column>
+                    <p:column>
                         <f:facet name="header">#{msg['listDonations.name_of_bank']}</f:facet>
                         <h:outputText value="#{donation.account.nameOfBank}"/>
-                    </h:column>
-                    <h:column>
+                    </p:column>
+                    <p:column>
                         <f:facet name="header">#{msg['listDonations.donation_amount']}</f:facet>
                         <h:outputText value="#{donation.amount}">
                             <f:convertNumber type="currency" currencyCode="EUR"/>
                         </h:outputText>
-                    </h:column>
-                    <h:column>
+                    </p:column>
+                    <p:column>
                         <f:facet name="header">#{msg['listDonations.receipt']}</f:facet>
                         <h:outputText
                                 value="#{donation.receiptRequested ? msg['listDonations.yes'] : msg['listDonations.no']}"/>
-                    </h:column>
-                    <h:column>
+                    </p:column>
+                    <p:column>
                         <f:facet name="header">#{msg['listDonations.status']}</f:facet>
                         <h:outputText value="#{msg['listDonations.status.TRANSFERRED']}"
                                       rendered="#{donation.status == 'TRANSFERRED'}"/>
                         <h:outputText value="#{msg['listDonations.status.IN_PROCESS']}"
                                       rendered="#{donation.status == 'IN_PROCESS'}"/>
-                    </h:column>
-                </h:dataTable>
-                <h:commandButton value="OK"
+                    </p:column>
+                </p:dataTable>
+                <p:commandButton value="OK" ajax="false"
                                  action="#{listDonationsController.doOk}"/>
             </h:form>
         </ui:define>
