--- a/my-aktion/src/main/webapp/index.html
+++ b/my-aktion/src/main/webapp/index.html
@@ -2,6 +2,6 @@
 
 <html>
 <head>
-<meta http-equiv="Refresh" content="0; URL=listCampaigns.jsf">
+    <meta http-equiv="Refresh" content="0; URL=organizer/listCampaigns.jsf">
 </head>
 </html>
